# Network

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  client_main.cpp  exec.sh  server_main.cpp
.github/workflows/: merge_submodule.yaml  project_safety.yaml
config/: protocol.json
documentation/: Porotocol_generator.md
include/: Address.hpp  Client.hpp  MessageProtocol.hpp  NetworkSocket.hpp  NetworkUtils.hpp  PacketSerializer.hpp  Server.hpp  temp.hpp
include/Network/: Address.hpp  Client.hpp  Logger.hpp  MessageProtocol.hpp  NetworkPlatform.hpp  NetworkSocket.hpp  NetworkUtils.hpp  Packet.hpp  PacketFactory.hpp  PacketSerializer.hpp  ProtocolManager.hpp  Server.hpp  generated_messages.hpp
src/: Address.cpp  Client.cpp  Logger.cpp  NetworkSocket.cpp  NetworkUtils.cpp  PacketFactory.cpp  PacketSerializer.cpp  ProtocolManager.cpp  Server.cpp  temp.cpp
tests/unit_tests/: CMakeLists.txt  temp.cpp
tools/: generate_protocol.py
